Added: - Data Providers folder - Router configuration - Login and SignUp Components - Home Components - Configure styles - Importing folders standard - Other configurations

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -1,3 +1,12 @@
 {
-  "primary.title": "Chatting"
+  "primary.title": "Chatting",
+  "name": "Name",
+  "email": "Email",
+  "phone": "Phone",
+  "birth_date": "Birth Date",
+  "login.form.username": "Username",
+  "login.form.password": "Password",
+  "login.form.password.show": "Password",
+  "login.form.password.hide": "Password",
+  "login.form.submit": "Login"
 }
